--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "license": "MIT",
   "dependencies": {
     "underscore": "^1.7.0",
-    "jquery": "^2.1.1",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-copy": "0.8.0"
+    "jquery": "^2.1.1"
+  },
+  "devDependencies": {
+    "browserify": "latest",
+    "grunt": "~0.4.0",
+    "grunt-browserify": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest"
   },
     "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "mocha"
   }
 }
