--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Andrew Gruner",
   "license": "MIT",
   "dependencies": {
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "javascript-state-machine": "~2.4.0"
   },
   "devDependencies": {
     "browserify": "latest",
