--- a/package.json
+++ b/package.json
@@ -14,17 +14,13 @@
     "javascript-state-machine": "~2.4.0"
   },
   "devDependencies": {
-    "browserify": "latest",
-    "grunt": "~0.4.0",
-    "grunt-browserify": "latest",
-    "grunt-contrib-clean": "latest",
-    "grunt-contrib-copy": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.3.4"
+    "@types/jasmine": "^3.8.2",
+    "jasmine": "^3.8.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
   },
   "scripts": {
-    "test": "mocha"
+    "build": "rm -rf dist && tsc",
+    "test": "npm run build && jasmine --config=jasmine.json"
   }
 }
