--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@types/jasmine": "^3.8.2",
     "jasmine": "^3.8.0",
+    "ts-loader": "^9.3.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && webpack",
     "test": "npm run build && jasmine --config=jasmine.json"
   }
 }
