--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tetris_js",
   "version": "2.0.0",
   "description": "A Tetris clone written in TypeScript",
-  "main": "index.js",
+  "main": "index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/gruner/tetris_js.git"
